--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                             <img class="chevron" src="images/chevron.svg" alt="" width="24" height="24">
                         </div>
                         <div id="answer" class="answer">
-                            <p>Just call us for a free consultation and we'll help you figure it out!</p>
+                            <p>No, our programs are specifically designed to keep your credit score intact.</p>
                         </div>
                     </div>
                     <div class="faqs-item">
@@ -298,7 +298,7 @@
                             <img class="chevron" src="images/chevron.svg" alt="" width="24" height="24">
                         </div>
                         <div id="answer" class="answer">
-                            <p>Just call us for a free consultation and we'll help you figure it out!</p>
+                            <p>On average, our clients reduce their monthly payments by up to 70%. The final amount depends on your specific situation.</p>
                         </div>
                     </div>
                     <div class="faqs-item">
@@ -307,7 +307,7 @@
                             <img class="chevron" src="images/chevron.svg" alt="" width="24" height="24">
                         </div>
                         <div id="answer" class="answer">
-                            <p>Just call us for a free consultation and we'll help you figure it out!</p>
+                            <p>The process usually takes between 1 and 2 weeks, depending on the complexity of your case.</p>
                         </div>
                     </div>
                     <div class="faqs-item">
@@ -316,7 +316,7 @@
                             <img class="chevron" src="images/chevron.svg" alt="" width="24" height="24">
                         </div>
                         <div id="answer" class="answer">
-                            <p>Just call us for a free consultation and we'll help you figure it out!</p>
+                            <p>Yes, all our solutions comply with the law and guarantee your legal protection.</p>
                         </div>
                     </div>
                     <div class="faqs-item">
