Scale animation added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="scripts/swiper.js" type="module"></script> 
     <script src="scripts/faq-list.js" type="module"></script>
+    <script src="scripts/animation.js" type="module"></script>
 </head>
 <body>
     <nav>
@@ -41,67 +42,57 @@
                 </div>
             </div>
             <div class="header-right-container">
-                <div aria-hidden="true">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 900 600" width="900" height="600" style="width: 100%; height: 100%; transform: translate3d(0px, 0px, 0px); content-visibility: visible;" preserveAspectRatio="xMidYMid meet">
+                <div class="svg-container" aria-hidden="true">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink"
+                        viewBox="0 0 900 600"
+                        width="900"
+                        height="600"
+                        style="width: 100%; height: 100%; transform: translate3d(0px, 0px, 0px); content-visibility: visible; transform: scale(-1, 1)"
+                        preserveAspectRatio="xMidYMid meet"
+                    >
                         <defs>
-                            <text style="font-size: 100px; font-family: Open Sans;" font-family="Open Sans" font-style="normal" font-weight="700">7</text>
-                            <text style="font-size: 100px; font-family: Open Sans;" font-family="Open Sans" font-style="normal" font-weight="200">1</text>
-                            <clipPath id="__lottie_element_2">
-                                <rect width="900" height="600" x="0" y="0"></rect>
-                            </clipPath>
-                            <linearGradient id="__lottie_element_30" spreadMethod="pad" gradientUnits="userSpaceOnUse" x1="-184" y1="0" x2="191" y2="0">
-                                <stop offset="0%" stop-color="rgb(224,117,12)"></stop>
-                                <stop offset="50%" stop-color="rgb(175,139,9)"></stop>
-                                <stop offset="100%" stop-color="rgb(127,162,7)"></stop>
-                            </linearGradient>
+                        <clipPath id="__lottie_element_2">
+                            <rect width="900" height="600" x="0" y="0"></rect>
+                        </clipPath>
+                        <linearGradient id="gradient" spreadMethod="pad" gradientUnits="userSpaceOnUse" x1="-184" y1="0" x2="191" y2="0">
+                            <stop offset="0%" stop-color="rgb(127,162,7)"></stop>
+                            <stop offset="50%" stop-color="rgb(175,139,9)"></stop>
+                            <stop offset="100%" stop-color="rgb(224,117,12)"></stop>
+                        </linearGradient>
                         </defs>
                         <g clip-path="url(#__lottie_element_2)">
-                            <g style="display: block;" transform="matrix(0.7810199856758118,0,0,0.7810199856758118,405.125,322)" opacity="1">
-                                <path stroke-linecap="round" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="4" stroke="rgb(255,255,255)" stroke-opacity="1" stroke-width="50" d=" M476.91,105.46 C476.91,-126.2 289.12,-314 57.46,-314 C-174.2,-314 -362,-126.2 -362,105.46"></path>
-                                <g opacity="1" transform="matrix(1,0,0,1,57.457000732421875,105.45700073242188)"></g>
-                            </g>
-                            <g style="display: block;" transform="matrix(0.7810199856758118,0,0,0.7810199856758118,405.125,322)" opacity="1">
-                                <g opacity="1" transform="matrix(1,0,0,1,57.457000732421875,105.45700073242188)">
-                                    <path stroke="url(#__lottie_element_30)" stroke-linecap="round" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="4" stroke-opacity="1" stroke-width="50" d=" M354.2090148925781,-224.7779998779297 C279.7869873046875,-341.8080139160156 148.96200561523438,-419.4570007324219 0,-419.4570007324219 C-231.66000366210938,-419.4570007324219 -419.4570007324219,-231.66000366210938 -419.4570007324219,0"></path>
-                                </g>
-                            </g>
-                            <g style="display: block;" transform="matrix(1.2606099843978882,0,0,1.2606099843978882,444,416)" opacity="1">
-                                <path stroke-linecap="round" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="4" stroke="rgb(0,0,0)" stroke-opacity="0.07" stroke-width="75" d=" M226.09,-139.42 C226.36,-138.95 226.64,-138.48 226.91,-138.01"></path>
-                                <g opacity="1" transform="matrix(0,-1,1,0,0.953000009059906,-7.625)"></g>
-                            </g>
-                            <g style="display: block;" transform="matrix(1.2606099843978882,0,0,1.2606099843978882,444,416)" opacity="1">
-                                <path stroke-linecap="round" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="4" stroke="rgb(119,166,7)" stroke-opacity="1" stroke-width="60" d=" M226.09,-139.42 C226.36,-138.95 226.64,-138.48 226.91,-138.01"></path>
-                                <g opacity="1" transform="matrix(0,-1,1,0,0.953000009059906,-7.625)"></g>
-                            </g>
-                            <g style="display: block;" transform="matrix(6.2100300788879395,0,0,6.2100300788879395,440,422)" opacity="1" fill="rgb(255,255,255)" font-size="36" font-family="Open Sans" font-style="normal" font-weight="700" aria-label="720">
-                                <text stroke-linecap="butt" stroke-linejoin="round" stroke-miterlimit="4" style="display: inherit;" xml:space="preserve" transform="matrix(1,0,0,1,-28.274999618530273,0)" opacity="1">7</text>
-                                <text stroke-linecap="butt" stroke-linejoin="round" stroke-miterlimit="4" style="display: inherit;" xml:space="preserve" transform="matrix(1,0,0,1,-7.725000381469727,0)" opacity="1">2</text>
-                                <text stroke-linecap="butt" stroke-linejoin="round" stroke-miterlimit="4" style="display: inherit;" xml:space="preserve" transform="matrix(1,0,0,1,10.274999618530273,0)" opacity="1">0</text>
-                            </g>
-                            <g style="display: block;" transform="matrix(3.3301899433135986,0,0,3.3301899433135986,-260.3558349609375,1164.4990234375)" opacity="1">
-                                <g opacity="1" transform="matrix(1,0,0,1,297.25201416015625,-277.2279968261719)">
-                                    <path stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="4" stroke="rgb(119,166,7)" stroke-opacity="0.01" stroke-width="3" d=" M0,-18.832000732421875 C10.393381118774414,-18.832000732421875 18.832000732421875,-10.393381118774414 18.832000732421875,0 C18.832000732421875,10.393381118774414 10.393381118774414,18.832000732421875 0,18.832000732421875 C-10.393381118774414,18.832000732421875 -18.832000732421875,10.393381118774414 -18.832000732421875,0 C-18.832000732421875,-10.393381118774414 -10.393381118774414,-18.832000732421875 0,-18.832000732421875z"></path>
-                                </g>
-                            </g>
-                            <g style="display: block;" transform="matrix(1.3630098104476929,0,0,1.3630098104476929,438,494)" opacity="1" fill="rgb(255,255,255)" font-size="32" font-family="Open Sans" font-style="normal" font-weight="700" aria-label="Good">
-                                <text stroke-linecap="butt" stroke-linejoin="round" stroke-miterlimit="4" style="display: inherit;" xml:space="preserve" transform="matrix(1,0,0,1,-37.34400177001953,0)" opacity="1">G</text>
-                                <text stroke-linecap="butt" stroke-linejoin="round" stroke-miterlimit="4" style="display: inherit;" xml:space="preserve" transform="matrix(1,0,0,1,-12.453332901000977,0)" opacity="1">o</text>
-                                <text stroke-linecap="butt" stroke-linejoin="round" stroke-miterlimit="4" style="display: inherit;" xml:space="preserve" transform="matrix(1,0,0,1,3.5466670989990234,0)" opacity="1">o</text>
-                                <text stroke-linecap="butt" stroke-linejoin="round" stroke-miterlimit="4" style="display: inherit;" xml:space="preserve" transform="matrix(1,0,0,1,19.546667098999023,0)" opacity="1">d</text>
-                            </g>
-                            <g style="display: block;" transform="matrix(1.363010048866272,0,0,1.363010048866272,778,494)" opacity="1" fill="rgb(255,255,255)" font-size="32" font-family="Open Sans" font-style="normal" font-weight="700" aria-label="850">
-                                <text stroke-linecap="butt" stroke-linejoin="round" stroke-miterlimit="4" style="display: inherit;" xml:space="preserve" transform="matrix(1,0,0,1,-24,0)" opacity="1">8</text>
-                                <text stroke-linecap="butt" stroke-linejoin="round" stroke-miterlimit="4" style="display: inherit;" xml:space="preserve" transform="matrix(1,0,0,1,-8,0)" opacity="1">5</text>
-                                <text stroke-linecap="butt" stroke-linejoin="round" stroke-miterlimit="4" style="display: inherit;" xml:space="preserve" transform="matrix(1,0,0,1,8,0)" opacity="1">0</text>
-                            </g>
-                            <g style="display: block;" transform="matrix(1.363010048866272,0,0,1.363010048866272,120,494)" opacity="1" fill="rgb(255,255,255)" font-size="32" font-family="Open Sans" font-style="normal" font-weight="700" aria-label="300">
-                                <text stroke-linecap="butt" stroke-linejoin="round" stroke-miterlimit="4" style="display: inherit;" xml:space="preserve" transform="matrix(1,0,0,1,-24,0)" opacity="1">3</text>
-                                <text stroke-linecap="butt" stroke-linejoin="round" stroke-miterlimit="4" style="display: inherit;" xml:space="preserve" transform="matrix(1,0,0,1,-8,0)" opacity="1">0</text>
-                                <text stroke-linecap="butt" stroke-linejoin="round" stroke-miterlimit="4" style="display: inherit;" xml:space="preserve" transform="matrix(1,0,0,1,8,0)" opacity="1">0</text>
-                            </g>
-                            <g style="display: block;" transform="matrix(1,0,0,1,-596,680)" opacity="1" fill="rgb(255,255,255)" font-size="12" font-family="Open Sans" font-style="normal" font-weight="200" aria-label=""></g>
-                        </g>                      
+                        <!-- Фонова шкала -->
+                        <path
+                            d="M476.91,105.46 C476.91,-126.2 289.12,-314 57.46,-314 C-174.2,-314 -362,-126.2 -362,105.46"
+                            transform="matrix(0.781,0,0,0.781,405,322)"
+                            fill="none"
+                            stroke="#ccc"
+                            stroke-width="50"
+                            stroke-linecap="round"
+                        ></path>
+                            
+                        <!-- Анімована шкала -->
+                        <path
+                            id="animated-path"
+                            d="M476.91,105.46 C476.91,-126.2 289.12,-314 57.46,-314 C-174.2,-314 -362,-126.2 -362,105.46"
+                            transform="matrix(0.781,0,0,0.781,405,322)"
+                            fill="none"
+                            stroke="url(#gradient)"
+                            stroke-width="50"
+                            stroke-linecap="round"
+                            stroke-dasharray="1500"
+                            stroke-dashoffset="1500"
+                        ></path>
+                        </g>
                     </svg>
+                    <p id="score" class="actual-score">720</p>
+                </div>   
+                <div class="score-nums">
+                    <p class="min-score">300</p>
+                    <p class="score-good">Good</p>
+                    <p class="max-score">850</p>
                 </div>
             </div>
         </div> 
